fix mark element overflow style

--- a/src/content_scripts/style.css
+++ b/src/content_scripts/style.css
@@ -14,18 +14,23 @@
 
 span.metword {
     position: relative;
-    z-index: 0;
+	z-index: 0;
 }
 
 span.metword::before {
     content: attr(data-times);
     color: var(--met-color);
     position: absolute;
-    z-index: -7665;
-    line-height: 0px;
-	width: 100%;
-    top: 100%;
+    z-index: -7671;
+    line-height: 3px;
+	height: 2px;
+	font-family:'Courier New', Courier, monospace;
+	font-weight: 600;
 	display: inline-block;
+	width: 100%;
+	left: 0%;
+	top: 100%;
 	text-align: left;
-	font-family: monospace;
+	overflow: hidden;
+	text-overflow: clip;
 }
